# mltg

./: .gitignore  AGENTS.md  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  cleanup-caches.yml
eva/: epsilon_test.py  main.py
mltg/: data.py  data_test.py  epsilon.py  main.py  mutation.py  mutation_test.py  training.py
mltg/language/: embedding.py  source.py  source_test.py
mltg/loss/: barlow_twins.py  barlow_twins_test.py
notebooks/: evolution.ipynb  lstm.ipynb  mnist_conv_playground.ipynb  mnist_playground.ipynb  rbf.ipynb  transformer.ipynb
