[project]
name = "mltg"
version = "0.1.0"
description = "Machine Learning Testground"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "flax==0.12.7",
    "jax[cpu]==0.10.1",
    "optax==0.2.8",
    "scipy==1.17.1",
]

[dependency-groups]
dev = [
    "jupyterlab==4.5.8",
    "matplotlib==3.10.9",
    "pytest==9.0.3",
    "ruff==0.15.16",
    "torchvision==0.27.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "PLR2004", "S101", "T20"]
